--- a/NumText-syntax.html
+++ b/NumText-syntax.html
@@ -100,6 +100,7 @@
   position: relative;
   flex-basis: 100%;
   display: flex;
+  overflow: hidden;
 }
 [part="content"]::before, [part="content"]::after {
   content: "";
