--- a/NumText-syntax.html
+++ b/NumText-syntax.html
@@ -272,7 +272,8 @@ class NumText extends HTMLElement {
     this.content.appendChild(this.editor);
     this.disabled = this.matches("[disabled]");
     //this.editor.value = this.getAttribute("value") || "";
-    this.editor.value = `<!DOCTYPE html>\n${document.documentElement.outerHTML}`;
+    //this.editor.value = `<!DOCTYPE html>\n${document.documentElement.outerHTML}`;
+    this.editor.value = decodeURI(`%3C!DOCTYPE%20html%3E%0A%3Chtml%20lang=%22${navigator.language}%22%3E%0A%0A%3Chead%3E%0A%0A%3Ctitle%3E%3C/title%3E%0A%3Cmeta%20charset=%22UTF-8%22%3E%0A%3Cmeta%20name=%22viewport%22%20content=%22width=device-width,%20initial-scale=1%22%3E%0A%0A%3Cstyle%3E%0A%20%20*,%20*::before,%20*::after%20%7B%0A%20%20%20%20box-sizing:%20border-box;%0A%20%20%7D%0A%20%20body%20%7B%0A%20%20%20%20font-family:%20sans-serif;%0A%20%20%7D%0A%3C/style%3E%0A%0A%3C/head%3E%0A%0A%3Cbody%3E%0A%0A%3Cscript%3E%0A%3C/script%3E%0A%0A%3C/body%3E%0A%0A%3C/html%3E`);
     this.editor.setSelectionRange(0,0);
     this.refreshLineNumbers();
   }
