Less Saturated Colors

--- a/NumText-syntax.html
+++ b/NumText-syntax.html
@@ -237,32 +237,32 @@
   opacity: 0.55;
 }
 .token:is(.tag,.regex) {/* HTML Tag, RegEx */
-  color: #ff575a;
+  color: #f75f62;
 }
 .token:is(.punctuation) {/* Global punctuation */
   color: var(--color);
   opacity: 0.7;
 }
 .token:is(.attr-name,.selector,.number,.boolean) {/* HTML attr-name, CSS selector, Global number, Global boolean */
-  color: #f1ac4d;
+  color: #e7aa55;
 }
 .token:is(.property) {/* CSS property */
-  opacity: 0.85;
+  color: #9ec7c7;
 }
 .token:is(.attr-value,.string) {/* HTML attr-value, Global string */
-  color: #7eda79;
+  color: #84d180;
 }
 .token:is(.important) {/* CSS important */
-  color: #fbf760;
+  color: #efea6c;
 }
 .token:is(.function) {/* CSS function, JS function */
-  color: #77bfff;
+  color: #84bef0;
 }
 .token:is(.operator) {/* Global operator */
-  color: #60dcd1;
+  color: #6ad2ca;
 }
 .token:is(.atrule,.keyword) {/* CSS @rule, JS Keyword */
-  color: #bf7afd;
+  color: #ca9df0;
 }
 </style>
 
