--- a/NumText-merger.html
+++ b/NumText-merger.html
@@ -52,18 +52,18 @@
   transition: 75ms;
   transition-property: background-color, border-color, box-shadow;
 }
-:host(num-text:hover) {
+:host(num-text:where(:hover)) {
   border-color: #3b3b3b;
 }
-:host(num-text:focus-within) {
+:host(num-text:where(:focus-within)) {
   --background: #f1fbff;
   border-color: #0050ff;
   box-shadow: 0 0 0 3px #8bd0e6ad;
 }
-:host(num-text:-moz-window-inactive) {
+:host(num-text:where(:-moz-window-inactive)) {
   --selection-background: var(--selection-background-inactive);
 }
-:host(num-text[disabled]) {
+:host(num-text:where([disabled])) {
   --background: #efefef;
   border-color: #b0b0b0;
   opacity: 0.65;
@@ -228,7 +228,7 @@
 
 <h1>NumText-merger</h1>
 
-<num-text id="code" syntax-highlight syntax-language="json" placeholder="Temp..." value='{
+<num-text id="code" placeholder="Temp..." value='{
   "name": true,
   "pancakes": "sweet-towels"
 }'></num-text>
@@ -237,23 +237,26 @@
 window.NumTextInterface = {
   themes: {
     entries: {},
-    add: ({ name, type = "any", content = "" } = {}) => {
+    define: ({ name, type = "any", content = "" } = {}) => {
       var stylesheet = document.createElement("style");
       stylesheet.setAttribute("num-text-theme",name);
       stylesheet.setAttribute("num-text-theme-type",type);
       stylesheet.textContent = content;
       NumTextInterface.themes.entries[name] = { type, stylesheet };
     },
-    remove: ({ name } = {}) => {
+    remove: name => {
+      document.querySelectorAll("num-text").forEach(element => {
+        if (name in element.themes.entries) element.themes.remove(name);
+      });
       delete NumTextInterface.themes.entries[name];
     }
   }
 };
-NumTextInterface.themes.add({
+NumTextInterface.themes.define({
   name: "default",
   content: document.querySelector("#shadow_styles").content.querySelector("[num-text-theme='default']").textContent
 });
-NumTextInterface.themes.add({
+NumTextInterface.themes.define({
   name: "default-highlighting",
   type: "syntax-highlight",
   content: document.querySelector("#shadow_styles").content.querySelector("[num-text-theme='default-highlighting']").textContent
@@ -266,20 +269,31 @@ class NumText extends HTMLElement {
       entries: {},
       add: name => {
         var { type, stylesheet } = NumTextInterface.themes.entries[name];
-        this.themes.entries[name] = { type, stylesheet: stylesheet.cloneNode(true) };
+        this.themes.entries[name] = { type, enabled: true, stylesheet: stylesheet.cloneNode(true) };
+        if (!this.hasAttribute("syntax-highlight") && type == "syntax-highlight") this.themes.disable(name);
         this.container.appendChild(this.themes.entries[name].stylesheet);
       },
       remove: name => {
         this.container.removeChild(this.themes.entries[name].stylesheet);
         delete this.themes.entries[name];
+      },
+      enable: name => {
+        this.themes.entries[name].enabled = true;
+        this.themes.entries[name].stylesheet.removeAttribute("media");
+      },
+      disable: name => {
+        this.themes.entries[name].enabled = false;
+        this.themes.entries[name].stylesheet.media = "not all";
       }
     };
     this.syntaxHighlight = {
       enable: () => {
         this.setAttribute("syntax-highlight",true);
+        this.container.querySelectorAll("style[num-text-theme-type='syntax-highlight']").forEach(theme => this.themes.enable(theme.getAttribute("num-text-theme")));
       },
       disable: () => {
         this.removeAttribute("syntax-highlight");
+        this.container.querySelectorAll("style[num-text-theme-type='syntax-highlight']").forEach(theme => this.themes.disable(theme.getAttribute("num-text-theme")));
       },
       language: language => {
         this.setAttribute("syntax-language",language);
@@ -297,7 +311,6 @@ class NumText extends HTMLElement {
     this.gutter.part = "gutter";
     this.gutter.addEventListener("mousedown",event => {
       event.preventDefault();
-      if (event.button != 0) return;
       var index = Array.from(this.gutter.children).indexOf(event.target);
       var line = indexi("\n",this.editor.value)[index - 1];
       this.editor.setSelectionRange(line,line);
